src/Test/Fixtures/Good/Types/paramTypeDeclaration.lf
let theta:param = Param("theta");