src/Test/Fixtures/Bad/Types/missingClosingParenInTypedParamDeclaration.lf
let theta : Param = param("theta" ;